Closed Bug 1657665 Opened 4 years ago Closed 4 years ago

Cannot navigate past initial link with VO

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: morgan, Assigned: morgan)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

STR:

  1. Lauch VO
  2. Load data:text/html,<a href="">empty link</a><br><a href="google.com">google</a><br><a>no href</a>
  3. Navigate using VO+next in the web area

Expected: VO cursor moves from "empty link" to "google"

Actual: VO cursor stays on "empty link" (maybe goes to the internal text node? hard to tell)

Assignee: nobody → mreschenberg
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4101493c2f41
Filter pivot matches for which there is no corresponding native accessible. r=eeejay
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: