Bug 1657665: Filter pivot matches for which there is no corresponding native accessible. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D86264